--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "tailwindcss": "^1.7.2"
   },
   "dependencies": {
-    "sirv-cli": "^1.0.0"
+    "dayjs": "^1.9.1",
+    "sirv-cli": "^1.0.0",
+    "svelte-calendar": "^1.5.0"
   }
 }
